--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,10 +26,14 @@ img {
 }
 
 header {
-  background: steelblue;
+  background: #000;
+  margin-top: 30px;
+  margin-left: 50px;
+  margin-right: 50px;
   color: #fff;
-  padding: 5px;
-  margin-bottom: 40px;
+  padding: 25px;
+  margin-bottom: 30px;
+  border-radius: 10px;
 }
 
 header a {
@@ -83,10 +87,15 @@ header a {
 }
 
 .card {
+  border: 1px solid rgb(213, 213, 213); 
   padding: 15px;
   border-radius: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
+
+.card:hover{
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
 
 .card-page {
   padding: 15px 30px;
@@ -97,9 +106,12 @@ header a {
 }
 
 .post-date {
-  background: #f4f4f4;
+  background: rgb(173, 250, 250);
+  margin-top: 5px;
   margin-bottom: 20px;
-  padding: 3px 10px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-weight: bold;
 }
 
 .post-body ul,
