--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,7 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+
+
 
 * {
   box-sizing: border-box;
@@ -8,6 +11,28 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #000; 
+  border-radius: 3px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: aqua; 
 }
 
 p {
@@ -60,9 +85,22 @@ header a {
   color: aquamarine;
   margin-left: 15%;
 }
+.form {
+  display: inline-block;
+  padding: 8px 16px;  
+  margin-bottom: 15px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit; 
+  border: 1px solid rgb(124, 124, 124); 
+  resize: none;
+}
 
 .btn {
-  display: inline-block;
+  text-align: center;
+  display: block;
+  margin-right: 50%;
   background: #000;
   color: #fff;
   border: none;
@@ -82,15 +120,16 @@ header a {
 
 .btn:hover {
   border: 1px solid black; 
-  transform: scale(0.95);
+  transform: scale(1);
   background-color: aqua;
   color: #000;
 }
 
 .btn-back {
-  background: #ffe1e1;
-  color: #000;
+  background: #000000;
+  color: #fff;
   margin-bottom: 20px;
+  margin-right: 70%;
   text-decoration:bold;
 }
 
@@ -107,10 +146,30 @@ header a {
   border-radius: 10px;
 }
 
+.divspace{
+  padding: 2%;
+}
+
+.small-card{
+  display: block;
+  border: 1px solid rgb(213, 213, 213); 
+  margin-left: 30%;
+  margin-right: 30%;
+  padding: 15px;
+  border-radius: 10px;
+}
+
+
+.small-card:hover{
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
+}
 .card:hover{
   box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
+.hidden{
+  display: none;
+}
 
 .card-page {
   padding: 15px 30px;
@@ -119,6 +178,7 @@ header a {
 .post-title {
   margin: 10px 0;
 }
+
 
 .post-date {
   background: rgb(173, 250, 250);
@@ -152,4 +212,9 @@ ol {
     padding: 20px;
     color: aquamarine;
   }
+  .small-card{
+    margin: 10%;
+  }
 }
+
+
