--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,21 +87,23 @@ header a {
 }
 .form {
   display: inline-block;
-  padding: 8px 16px;  
+  text-align: left;
+  margin-left: -1px;
+  padding: 4% 20%;  
   margin-bottom: 15px;
   border-radius: 5px;
   text-decoration: none;
   font-size: 15px;
   font-family: inherit; 
-  border: 1px solid rgb(124, 124, 124); 
+  border: 1px solid rgb(183, 183, 183); 
   resize: none;
 }
 
 .btn {
   text-align: center;
   display: block;
-  margin-right: 50%;
   background: #000;
+  margin-left: 30%;
   color: #fff;
   border: none;
   padding: 8px 16px;
@@ -130,7 +132,7 @@ header a {
   background: #000000;
   color: #fff;
   margin-bottom: 20px;
-  margin-right: 70%;
+  margin-right: 30%;
   text-decoration:bold;
 }
 
@@ -154,8 +156,8 @@ header a {
 .small-card{
   display: block;
   border: 1px solid rgb(213, 213, 213); 
-  margin-left: 30%;
-  margin-right: 30%;
+  margin-left: 25%;
+  margin-right: 25%;
   padding: 15px;
   border-radius: 10px;
 }
@@ -176,10 +178,19 @@ header a {
   padding: 15px 30px;
 }
 
-.post-title {
+
+.post-big-title {
+  font-weight:bold;
+  font-size:xx-large;
+  color: #000;
   margin: 10px 0;
 }
-
+.post-title {
+  font-weight:bold;
+  font-size: large;
+  color: #000;
+  margin: 10px 0;
+}
 
 .post-date {
   background: rgb(173, 250, 250);
@@ -205,6 +216,15 @@ ol {
   line-height: 2.3;
 }
 
+/* new form */
+.form-group {
+  margin-top: 1.6rem;
+  position: relative;
+  min-height: 3rem;
+  line-height: 3rem;
+}
+/* new form */
+
 @media (max-width: 500px) {
   .posts {
     grid-template-columns: 1fr;
@@ -214,7 +234,7 @@ ol {
     color: aquamarine;
   }
   .small-card{
-    margin: 10%;
+    margin: 0;
   }
 }
 
